# EEmiLib

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  release.py  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: index.doctree
.doctrees/eemilib/: eemilib.doctree  eemilib.emission_data.data_matrix.doctree  eemilib.emission_data.doctree  eemilib.emission_data.emission_angle_distribution.doctree  eemilib.emission_data.emission_data.doctree  eemilib.emission_data.emission_energy_distribution.doctree  eemilib.emission_data.emission_yield.doctree  eemilib.emission_data.helper.doctree  eemilib.gui.doctree  eemilib.gui.file_selection.doctree  eemilib.gui.gui.doctree  eemilib.gui.helper.doctree  eemilib.gui.model_selection.doctree  eemilib.loader.deesse_loader.doctree  eemilib.loader.doctree  eemilib.loader.loader.doctree  eemilib.loader.pandas_loader.doctree  eemilib.main.doctree  eemilib.model.doctree  eemilib.model.model.doctree  eemilib.model.model_config.doctree  eemilib.model.parameter.doctree  eemilib.model.vaughan.doctree  eemilib.plotter.doctree  eemilib.plotter.pandas.doctree  eemilib.plotter.plotter.doctree  eemilib.util.constants.doctree  eemilib.util.doctree  eemilib.util.helper.doctree  eemilib.util.log_manager.doctree  modules.doctree
.doctrees/manual/: bibliography.doctree  models.doctree  presentation.doctree  quick_start.doctree  requirements_note.doctree  roadmap.doctree
.github/workflows/: documentation.yml  release.yml  test.yml
_sources/eemilib/: eemilib.emission_data.emission_data.rst.txt  eemilib.emission_data.rst.txt  eemilib.loader.pandas_loader.rst.txt  eemilib.loader.rst.txt  eemilib.main.rst.txt  eemilib.model.model_config.rst.txt  eemilib.model.rst.txt  eemilib.rst.txt  eemilib.util.log_manager.rst.txt  eemilib.util.rst.txt
data/example_copper/: README.md  measured_TEEY_Cu_1_eroded.txt  measured_TEEY_Cu_1_heated.txt  measured_TEEY_Cu_2_as-received.txt  measured_TEEY_Cu_2_eroded.txt  measured_TEEY_Cu_2_heated.txt
docs/: Makefile  conf.py  index.rst  references.bib
docs/eemilib/: eemilib.core.model_config.rst  eemilib.core.rst  eemilib.data.ag.emission_energy.rst  eemilib.data.ag.rst  eemilib.data.cu.rst  eemilib.data.reference_ag.rst  eemilib.data.rst  eemilib.emission_data.data_matrix.rst  eemilib.emission_data.emission_angle_distribution.rst  eemilib.emission_data.emission_data.rst  eemilib.emission_data.emission_energy_distribution.rst  eemilib.emission_data.emission_yield.rst  eemilib.emission_data.helper.rst  eemilib.emission_data.rst  eemilib.gui.file_selection.rst  eemilib.gui.gui.rst  eemilib.gui.helper.rst  eemilib.gui.loader_selection.rst  eemilib.gui.model_selection.rst  eemilib.gui.rst  eemilib.gui.styles.rst  eemilib.loader.deesse_loader.rst  eemilib.loader.helper.rst  eemilib.loader.loader.rst  eemilib.loader.pandas_loader.rst  eemilib.loader.rst  eemilib.main.rst  eemilib.model.chung_and_everhart.rst  eemilib.model.dionne.rst  eemilib.model.maxwellian.rst  eemilib.model.model.rst  eemilib.model.model_config.rst  eemilib.model.parameter.rst  eemilib.model.rst  eemilib.model.sombrin.rst  eemilib.model.vaughan.rst  eemilib.plotter.helper.rst  eemilib.plotter.pandas.rst  eemilib.plotter.plotter.rst  eemilib.plotter.rst  (+9 more)
docs/manual/: future_updates.rst  models.rst  notations.rst  presentation.rst  quick_start.rst  requirements_note.rst
doctrees/: environment.pickle  index.doctree
doctrees/eemilib/: eemilib.doctree  eemilib.emission_data.data_matrix.doctree  eemilib.emission_data.doctree  eemilib.emission_data.emission_angle_distribution.doctree  eemilib.emission_data.emission_data.doctree  eemilib.emission_data.emission_energy_distribution.doctree  eemilib.gui.doctree  (+30 more)
eemilib/: __init__.py  eemilib.emission_data.data_matrix.html  eemilib.emission_data.emission_angle_distribution.html  eemilib.emission_data.emission_data.html  eemilib.emission_data.emission_energy_distribution.html  eemilib.emission_data.emission_yield.html  eemilib.emission_data.helper.html  eemilib.emission_data.html  eemilib.gui.file_selection.html  eemilib.gui.gui.html  eemilib.gui.helper.html  eemilib.gui.html  eemilib.gui.model_selection.html  eemilib.html  eemilib.loader.deesse_loader.html  eemilib.loader.html  eemilib.loader.loader.html  eemilib.loader.pandas_loader.html  eemilib.main.html  eemilib.model.html  eemilib.model.model.html  eemilib.model.model_config.html  eemilib.model.parameter.html  eemilib.model.vaughan.html  eemilib.plotter.html  eemilib.plotter.pandas.html  eemilib.plotter.plotter.html  eemilib.util.constants.html  eemilib.util.helper.html  eemilib.util.html  eemilib.util.log_manager.html  modules.html
gui/: gui.py
html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
manual/: bibliography.html  models.html  presentation.html  quick_start.html  requirements_note.html  roadmap.html
tests/: test_emission_data_helpers.py
(+168 files in other folders)
