[project]
authors = [
   { name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" },
]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
   "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
   "matplotlib==3.9.1",
   "myst-parser==3.0.1",
   "nbsphinx==0.9.4",
   "numpy==2.0.0",
   "pandas==2.2.2",
   "PyQt5==5.15.10",
   "pytest==8.2.2",
   "setuptools==70.2.0",
   "sphinx-rtd-theme==2.0.0",
]
description = "Fit various Electron EMIssion models on experimental data."
keywords = ["electron emission", "multipactor"]
name = "EEmiLib"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.scripts]
eemilib-gui = "eemilib.gui.gui:main"

[project.urls]
Documentation = " https://electron-emission-fitter-electron-emission-83105ebd6cd34bd4e7a3.pages.in2p3.fr/html/index.html"
Homepage = "https://gitlab.in2p3.fr/electron_emission/eemilib"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
markers = []
minversion = "6.0"
testpaths = ["tests"]

[tool.isort]
profile = "black"
src_paths = ["./eemilib/"]

[tool.black]
line-length = 79

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]
