[project]
authors = [
   { name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" },
]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
   "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
   "matplotlib>=3.9.1, <4.0.0",
   "myst-parser>=3.0.1, <4.0.0",
   "nbsphinx>=0.9.4, <1.0.0",
   "numpy>=2.0.1, <3.0.0",
   "pandas>=2.2.2, <3.0.0",
   "PyQt5>=5.15.10, < 6.0.0",
   "pytest>=8.3.2, <9.0.0",
   "setuptools>=72.0.0, <73.0.0",
   "sphinx-rtd-theme>=2.0.0, <3.0.0",
   "sphinxcontrib-bibtex>=2.6.0,<3.0.0",
]
description = "Fit various Electron EMIssion models on experimental data."
keywords = ["electron emission", "multipactor"]
name = "EEmiLib"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.6"

[project.scripts]
eemilib-gui = "eemilib.gui.gui:main"

[project.urls]
Documentation = "https://adrienplacais.github.io/EEmiLib/html/index.html"
Homepage = "https://github.com/AdrienPlacais/EEmiLib"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["./eemilib/"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
markers = []
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]
