[project]
authors = [
   { name = "Adrien Plaçais", email = "placais@lpsc.in2p3.fr" },
]
classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
   "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
   "matplotlib>=3.9.1,<4",
   "numpy>=2,<3",
   "pandas>=2.2.2,<3",
   "PyQt5>=5.15.10,< 6",
   "scipy>=1.14,<2",
]
description = "Fit various Electron EMIssion models on experimental data."
keywords = ["electron emission", "multipactor"]
name = "EEmiLib"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.6"

[project.optional-dependencies]
docs = [
   "myst-parser>=4,<5",
   "nbsphinx>=0.9.6,<1",
   "sphinx-rtd-theme>=3,<4",
   "sphinxcontrib-bibtex>=2.6,<3",
]
test = ["pytest>=8.3.2,<9"]

[project.scripts]
eemilib-gui = "eemilib.gui.gui:main"

[project.urls]
Documentation = "https://adrienplacais.github.io/EEmiLib/"
Homepage = "https://github.com/AdrienPlacais/EEmiLib"

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["./eemilib/"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
filterwarnings = ["ignore:.*cKDTree.*:DeprecationWarning"]
markers = [
   "implementation: mark tests/functionalities currently under implementation",
   "slow: mark a test as slow (deselect with '-m \"not slow\"')",
   "smoke: mark quick and critical tests (select with '-m smoke')",
]
minversion = "6.0"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel"]
